分页调整 隐藏动态资源目录接口说明 首页目录展示接口联调和部局修正

--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -39,7 +39,7 @@
         <el-table-column prop="column_desc" label="中文描述"	width="50%"></el-table-column>
         </el-table>
 			</el-tab-pane>
-			<el-tab-pane label="接口说明" name="interfaceinfo">
+			<!-- <el-tab-pane label="接口说明" name="interfaceinfo">
 		<p v-show="tableInterfaces.length == 0">暂无接口说明</p>
 				 <div v-show="tableInterfaces.length > 0"><el-table
 				    :data="tableInterfaces"
@@ -63,7 +63,7 @@
 				      	{{ props.row.service_url }}
 				      </template>
 				    </el-table-column>
-				  </el-table></div></el-tab-pane>
+				  </el-table></div></el-tab-pane> -->
 
 			</el-tabs>
 		</div>
