--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -3,7 +3,7 @@
     <section class="top_conttitle">
        <router-link to="/layout/dashboard">
       <img class="logopng" src="../assets/login/logo.png">
-      <p>成都市大数据资源服务网</p>
+      <p>{{sysObj.projectPortalName}}</p>
        </router-link>
       <div class="righttext">
       </div>
