部门由多选改成单选 分页

--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -330,7 +330,7 @@
     <div class="article">
       <h3 class="title">{{carouselDetail.title}}</h3>
       <div class="item_des">
-        <span>时间：<em  class="source">{{carouselDetail.publish_date}}</em></span>
+        <span>时间：<em  class="source">{{carouselDetail.update_time}}</em></span>
       </div>
       <div class="policy_content" v-html="carouselDetail.news_content"></div>
     </div>
