--- a/sources/index.html
+++ b/sources/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-  <title>成都市大数据资源服务网</title>
+  <title ></title>
   <meta name="renderer" content="webkit" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
