--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -26,7 +26,7 @@
               <el-col :span="23" :offset="1">
                 <el-form-item label="部门" prop="depId" label-suffix="sfdfsd">
                   <el-dropdown trigger="click" style="width:100%">
-                    <span class="el-dropdown-link"  v-bind：title="depName">
+                    <span class="el-dropdown-link"  v-bind:title="depName">
                 <input type="text" v-model="depName" class="el-input__inner" >
                  </span>
                     <el-dropdown-menu slot="dropdown" style="min-width:300px;max-height:300px;overflow: auto">
