--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -97,7 +97,7 @@
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column label="所属目标">
+              <el-table-column label="所属目录">
                 <template scope="scope">
                   <div class="over_space">
                     <span v-bind:title="scope.row.classify_structure_name">{{scope.row.classify_structure_name}}</span>
@@ -126,14 +126,14 @@
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column label="所属目录" width="180">
+              <el-table-column label="所属部门" width="180">
                 <template scope="scope">
                   <div class="over_space">
                     <span v-bind:title="scope.row.fname">{{scope.row.fname}}</span>
                   </div>
                 </template>
               </el-table-column>
-              <el-table-column label="所属目标">
+              <el-table-column label="所属目录">
                 <template scope="scope">
                   <div class="over_space">
                     <span v-bind:title="scope.row.classify_structure_name">{{scope.row.classify_structure_name}}</span>
