最热目录添加所属部门字段

--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -129,7 +129,7 @@
               <el-table-column label="所属部门" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-bind:title="scope.row.fname">{{scope.row.fname}}</span>
+                    <span v-bind:title="scope.row.dep_name">{{scope.row.dep_name}}</span>
                   </div>
                 </template>
               </el-table-column>
