ie11的一些兼容性问题和样式微调

--- a/sources/interaction/sidebar/view.html
+++ b/sources/interaction/sidebar/view.html
@@ -1,7 +1,7 @@
 <main id="interaction-sidebar">
   <section class="side">
     <div class=" side bg-fff">
-      <ul class="interaction-menuList b-DF" style="min-height:800px;">
+      <ul class="interaction-menuList b-DF">
         <li>
           <router-link to="/layout/interaction/aboutUs"><i class="fa fa-list-alt"></i>关于我们</router-link>
         </li>
