--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -158,7 +158,7 @@
               <div class="pull-left" style="width: 89%;">
                 <h5 class="dem-head over_space" style="width: 100%" v-bind:title="item.title">{{item.title}}</h5>
                 <div class="dem-des">
-                  <span v-if="item.publish_date">{{item.publish_date}}</span>
+                  <span v-if="item.create_time">{{item.create_time}}</span>
                   <span v-if="item.author_name">作者：<em class="autor">{{item.author_name}}</em></span>
                 </div>
               </div>
