下拉菜单样式

--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -30,7 +30,7 @@
                 <input type="text" v-model="depName" class="el-input__inner" >
                  </span>
                     <el-dropdown-menu slot="dropdown" style="min-width:300px;max-height:300px;overflow: auto">
-                      <el-tree :data="depData" :props="props"  :load="loadNode" lazy accordion @node-click="handleNodeClick" highlight-current></el-tree>
+                      <el-tree :data="depData" :props="props" :render-content="renderContent"  :load="loadNode" lazy accordion @node-click="handleNodeClick" highlight-current></el-tree>
                     </el-dropdown-menu>
                   </el-dropdown>
                 </el-form-item>
