--- a/sources/register/view.html
+++ b/sources/register/view.html
@@ -29,11 +29,28 @@
             </el-row>
             <el-row>
               <el-col :span="14" :offset="1">
+                <el-form-item label="区域" prop="regionCode">
+                  <el-dropdown trigger="click" style="width:100%">
+                    <span class="el-dropdown-link" v-bind:title="regionName">
+                <input type="text" v-model="regionName" class="el-input__inner" @click="PregionData()">
+                 </span>
+                    <el-dropdown-menu slot="dropdown" style="min-width:400px;max-height:300px;overflow: auto">
+                      <el-tree :data="regionData" :props="regionProps"  :load="regionLoadNode" lazy accordion @node-click="regionHandleNodeClick" highlight-current></el-tree>
+                    </el-dropdown-menu>
+                  </el-dropdown>
+                </el-form-item>
+              </el-col>
+              <el-col :span="6" :offset="1">
+                <label class=" help-block">请选择您想要申请账号的区域</label>
+              </el-col>
+            </el-row>
+            <el-row>
+              <el-col :span="14" :offset="1">
                 <el-form-item label="部门" prop="orgCode">
                   <!-- <el-input type="text" v-model="ruleForm.orgCode"></el-input> -->
                   <el-dropdown trigger="click" style="width:100%">
                     <span class="el-dropdown-link" v-bind:title="depName">
-                <input type="text" v-model="depName" class="el-input__inner" >
+                <input type="text" v-model="depName" class="el-input__inner" @click="PdepData">
                  </span>
                     <el-dropdown-menu slot="dropdown" style="min-width:400px;max-height:300px;overflow: auto">
                       <el-tree :data="depData" :props="props"  :load="loadNode" lazy accordion @node-click="handleNodeClick" highlight-current></el-tree>
