--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -257,7 +257,7 @@
   <!-- 数据图谱 start -->
   <section class="main-4">
     <div class="section-content">
-      <div class="main-title">
+      <!-- <div class="main-title">
         <h4 class="title">
           数据图谱
         </h4>
@@ -274,7 +274,7 @@
         <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_3/page.html" target="_blank"> <img src="../assets/dashboard/map3.png" /></a>
         <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_4/page.html" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
         <a href="http://10.190.239.12:8080/data-view-web-scatter/pages/page_5/page.html" target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
-      </div>
+      </div> -->
       <section>
         <div class="main-title">
           <h4 class="title">
